Rename Undo class to UndoHistory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -212,7 +212,7 @@ add_library(aseprite-library
   raster/rotate.cpp
   raster/sprite.cpp
   raster/stock.cpp
-  raster/undo.cpp
+  raster/undo_history.cpp
   settings/ui_settings_impl.cpp
   skin/button_icon_impl.cpp
   skin/skin_theme.cpp
