--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -282,6 +282,7 @@ add_library(aseprite-library
   widgets/editor/click.cpp
   widgets/editor/cursor.cpp
   widgets/editor/editor.cpp
+  widgets/editor/editor_listeners.cpp
   widgets/editor/keys.cpp
   widgets/editor/pixels_movement.cpp
   widgets/fileview.cpp
