Add DropDownButton widget.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -283,6 +283,7 @@ add_library(aseprite-library
   widgets/color_button.cpp
   widgets/color_selector.cpp
   widgets/color_sliders.cpp
+  widgets/drop_down_button.cpp
   widgets/editor/click.cpp
   widgets/editor/cursor.cpp
   widgets/editor/drawing_state.cpp
