--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,17 +42,22 @@ else()
   set(libs3rdparty ${libs3rdparty} libpng)
 endif()
 
+if(CURL_STATICLIB)
+  add_definitions(-DCURL_STATICLIB)
+endif()
+
 if (CMAKE_USE_PTHREADS_INIT)
   set(sys_libs ${sys_libs} ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
 # All libraries for .exe files
-set(all_libs aseprite-library undo-lib filters-lib gui-lib gfx-lib base-lib
+set(all_libs aseprite-library undo-lib filters-lib gui-lib gfx-lib net-lib base-lib
   ${libs3rdparty} allegro ${sys_libs})
 
 # Directories where .h files can be found
 include_directories(
   . .. ../third_party
+  ${CURL_DIR}/include
   ${GIFLIB_DIR}/lib
   ${LIBFREETYPE_DIR}/include
   ${LIBJPEG_DIR}
@@ -66,9 +71,10 @@ include_directories(
 
 add_subdirectory(allegro)
 add_subdirectory(base)
+add_subdirectory(filters)
 add_subdirectory(gfx)
 add_subdirectory(gui)
-add_subdirectory(filters)
+add_subdirectory(net)
 add_subdirectory(undo)
 
 ######################################################################
@@ -318,14 +324,14 @@ add_executable(aseprite WIN32 main.cpp ${win32_resources})
 
 target_link_libraries(aseprite ${all_libs})
 
-INSTALL(TARGETS aseprite
+install(TARGETS aseprite
   RUNTIME DESTINATION bin)
 
-INSTALL(DIRECTORY ../data
+install(DIRECTORY ../data
   DESTINATION share/aseprite)
 
 if(EXISTS ../docs/quickref.pdf)
-  INSTALL(FILES ../docs/quickref.pdf
+  install(FILES ../docs/quickref.pdf
     DESTINATION share/aseprite/docs/quickref.pdf)
 endif()
 
