Add FULLSCREEN_PLATFORM configuration in makefile.cfg.

--- a/makefile.cfg
+++ b/makefile.cfg
@@ -16,6 +16,7 @@
 #MEMLEAK = 1
 #STATIC_ALLEG_LINK = 1
 #HAVE_RESIZE_PATCH = 1
+#FULLSCREEN_PLATFORM = 1
 
 ######################################################################
 # Default Unix directory to look for ASE data (to this path will be
