--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,10 +156,9 @@ endif()
 # -- Windows --
 
 if(WIN32)
-  find_package(DDraw)
   find_package(DXGuid)
 
-  if(NOT DDRAW_FOUND OR NOT DXGUID_FOUND)
+  if(NOT DXGUID_FOUND)
     if(MSVC)
       message(FATAL_ERROR
         "DirectX required for Windows port. You might need to add DirectX include and lib directories to your INCLUDE and LIB environment variables.")
@@ -172,7 +171,6 @@ if(WIN32)
   endif()
 
   include_directories(SYSTEM
-    ${DDRAW_INCLUDE_DIR}
     ${DXGUID_INCLUDE_DIR}
     )
 
@@ -182,7 +180,6 @@ if(WIN32)
     gdi32
     comdlg32
     ole32
-    ${DDRAW_LIBRARIES}
     ${DXGUID_LIBRARIES}
     winmm
     shlwapi
