Add "Import Sprite Sheet" command (part of issue #4).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,6 +146,7 @@ add_library(aseprite-library
   commands/cmd_goto_frame.cpp
   commands/cmd_goto_layer.cpp
   commands/cmd_grid.cpp
+  commands/cmd_import_sprite_sheet.cpp
   commands/cmd_invert_mask.cpp
   commands/cmd_launch.cpp
   commands/cmd_layer_from_background.cpp
