--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,6 +1,8 @@
 # ASE - Allegro Sprite Editor
 # Copyright (C) 2001-2011  David Capello
 
+add_definitions(-DCURL_STATICLIB)
+
 add_library(net-lib
   http_headers.cpp
   http_request.cpp
