Remove the editor's default state. Now the editor has a decorator property. + Removed Editor::setDefaultState. + Removed EditorState::getDecorator. + Added Editor::get/setDecorator. + Added EditorStatesHistory class and Editor::backToPreviousState() method. + Added EditorState::onBeforePopState event.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -310,6 +310,7 @@ add_library(aseprite-library
   widgets/editor/drawing_state.cpp
   widgets/editor/editor.cpp
   widgets/editor/editor_listeners.cpp
+  widgets/editor/editor_states_history.cpp
   widgets/editor/editor_view.cpp
   widgets/editor/keys.cpp
   widgets/editor/moving_cel_state.cpp
