--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -2,9 +2,5 @@
 # Copyright (C) 2001-2011  David Capello
 
 add_library(gfx-lib
-  border.cpp
   hsv.cpp
-  point.cpp
-  rect.cpp
-  rgb.cpp
-  size.cpp)
+  rgb.cpp)
