Add transformation support (scale/rotate) to the selected area. + Added support to rotate images of IMAGE_BITMAP type. + Added transformation_handle & pivot_handle parts in sheet.png. + Added rotation cursors in sheet.png. + Added gfx::Transformation class and Document::m_transformation field. + Added StandbyState::Decorator and TransformHandles class to draw   transformation handles. + Modified PixelsMovement class to support transformation handles. + Added new Linear Algebra library with Vector2d class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -320,6 +320,7 @@ add_library(aseprite-library
   widgets/editor/select_box_state.cpp
   widgets/editor/standby_state.cpp
   widgets/editor/tool_loop_impl.cpp
+  widgets/editor/transform_handles.cpp
   widgets/fileview.cpp
   widgets/groupbut.cpp
   widgets/hex_color_entry.cpp
