Avoid duplicated code to flip the image. - Added raster::algorithm::FlipType enum and flip_image function. - Added gfx/fwd.h for forward declarations.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -226,8 +226,9 @@ add_library(aseprite-library
   modules/palettes.cpp
   modules/rootmenu.cpp
   raster/algo.cpp
-  raster/algofill.cpp
   raster/algo_polygon.cpp
+  raster/algofill.cpp
+  raster/algorithm/flip_image.cpp
   raster/blend.cpp
   raster/cel.cpp
   raster/cel_io.cpp
