Replace find_library/path of giflib with find_package (thanks to Tobias Hansen).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,11 +52,11 @@ else()
 endif()
 
 if(USE_SHARED_GIFLIB)
-  find_library(GIFLIB_LIBRARY gif)
-  find_path(GIFLIB_INCLUDE_DIR gif_lib.h)
-
-  set(libs3rdparty ${libs3rdparty} ${GIFLIB_LIBRARY})
-  include_directories(${GIFLIB_INCLUDE_DIR})
+  find_package(GIF REQUIRED)
+  if(GIF_FOUND)
+    set(libs3rdparty ${libs3rdparty} ${GIF_LIBRARIES})
+    include_directories(${GIF_INCLUDE_DIR})
+  endif(GIF_FOUND)
 else()
   set(libs3rdparty ${libs3rdparty} giflib)
   include_directories(${GIFLIB_DIR}/lib)
