Implement base::this_thread::yield & sleep_for().

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,6 +1,18 @@
 # ASEPRITE
 # Copyright (C) 2001-2012  David Capello
 
+CHECK_C_SOURCE_COMPILES("
+#include <unistd.h>
+int main() {
+  sched_yield();
+  return 0;
+}
+" HAVE_SCHED_YIELD)
+
+if(HAVE_SCHED_YIELD)
+  add_definitions(-DHAVE_SCHED_YIELD)
+endif()
+
 add_library(base-lib
   convert_to.cpp
   errno_string.cpp
