Rename layer_new_flatten_copy() to create_flatten_layer_copy() and moved to src/flatten.cpp file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -144,6 +144,7 @@ add_library(aseprite-library
   documents.cpp
   drop_files.cpp
   file_system.cpp
+  flatten.cpp
   gfxmode.cpp
   gui_xml.cpp
   ini_file.cpp
