Replace deprecated "Monitor" struct from gui module with ui::Timers. - Added ThumbnailGenerator class to avoid mixing the thumbnail generation   code with FileList widget. - Added IFileOpProgress for fop_operate() so we can update the job progress   when the "file operation" progress changes.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -156,6 +156,7 @@ add_library(aseprite-library
   recent_files.cpp
   resource_finder.cpp
   scoped_allegro.cpp
+  thumbnail_generator.cpp
   ui_context.cpp
   undo_transaction.cpp
   xml_exception.cpp
