Add DocumentUndo to avoid app specific data in the undo library. The UndoHistory was simplified, m_enabled/label/modification members were removed because they aren't part of the undo library goal. Now the "label" field is part of Open/CloseGroup undoers, and all undoers must be enclosed in a group (this restriction is only for the app, the undo library doesn't have this restriction). In this way, the label/modification information is exchanged between an OpenGroup <-> CloseGroup pair only.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,7 @@ add_library(aseprite-library
   context_flags.cpp
   context_listener_list.cpp
   document.cpp
+  document_undo.cpp
   documents.cpp
   drop_files.cpp
   file_system.cpp
